# torrent-clients

./: .gitignore  .pre-commit-config.yaml  .pylintrc  AGENTS.local.md.example  AGENTS.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml
src/torrent_clients/: __init__.py  client_helper.py
src/torrent_clients/client/: base_client.py  client_type.py  qbittorrent_client.py  transmission_client.py
src/torrent_clients/torrent/: torrent_file.py  torrent_info.py  torrent_peer.py  torrent_status.py  torrent_tracker.py
src/torrent_clients/transport/: __init__.py  errors.py  http.py  qbittorrent.py  transmission.py
src/torrent_clients/utils/: __init__.py  labels.py
tests/: __init__.py  test_batch_labels.py  test_client_helper.py  test_client_interfaces.py  test_client_parity.py  test_contract_cleanup.py  test_hydrate_files.py  test_label_utils.py  test_lazy_proxy.py  test_owned_transports.py  test_qb_lazyload.py  test_qb_transport.py  test_qb_transport_seam.py  test_snapshot_fetch.py  test_torrent_status.py  test_transmission_lazy.py  test_transmission_transport.py  test_transport_parity.py
