[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torrent-clients"
version = "0.2.0"
description = "Common torrent client wrappers for qBittorrent and Transmission."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "cancelpt" }]
keywords = ["torrent", "qbittorrent", "transmission"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "pydantic>=2,<3",
  "qbittorrent-api>=2024.10.68,<2024.11",
  "transmission-rpc>=7.0.11,<8",
]

[project.optional-dependencies]
dev = [
  "pre-commit>=3.5,<3.7; python_version < '3.9'",
  "pre-commit>=3.7; python_version >= '3.9'",
  "pytest>=8.3",
  "ruff>=0.15",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["torrent_clients*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-p no:vsengine"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
